fix user response object in docs
