# api/v1/docs/swagger.json
@@ -310,7 +310,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserResponse"
                         }
                     }
                 }
@@ -634,13 +634,9 @@
                 }
             }
         },
-        "models.User": {
+        "models.UserResponse": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string",
-                    "example": "2024-01-22 17:03:50.283466+00"
-                },
                 "email": {
                     "type": "string",
                     "example": "email@email.com"
@@ -649,17 +645,9 @@
                     "type": "string",
                     "example": "FirstName"
                 },
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                },
                 "last_name": {
                     "type": "string",
                     "example": "LastName"
-                },
-                "password": {
-                    "type": "string",
-                    "example": "hash"
                 },
                 "role": {
                     "type": "string",
